<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/menu_read_config"
        android:icon="@drawable/ic_device_info"
        android:title="@string/menu_read_config"
        app:iconTint="@color/cl_menu_icon_tint"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_radio_info"
        android:icon="@drawable/ic_cell_tower"
        android:title="@string/menu_radio_info"
        app:iconTint="@color/cl_menu_icon_tint"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_airplane_mode"
        android:icon="@drawable/ic_network_settings"
        android:title="@string/menu_airplane_mode"
        app:iconTint="@color/cl_menu_icon_tint"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_location_settings"
        android:icon="@drawable/ic_my_location"
        android:title="@string/menu_location_settings"
        app:iconTint="@color/cl_menu_icon_tint"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_open_in_map"
        android:title="@string/menu_open_in_map"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_geocode"
        android:title="@string/menu_geocode"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_app_info"
        android:title="@string/menu_app_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_nfw_info"
        android:title="@string/menu_nfw_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_logalong"
        android:title="@string/menu_logalong"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_gms_update"
        android:title="@string/menu_gms_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_bluesky_check"
        android:title="@string/menu_bluesky_check"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_version_info"
        android:enabled="false"
        android:title=""
        app:showAsAction="never" />

</menu>
