<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="phoneStatus" type="String" />
        <variable name="dataStatus" type="String" />
        <variable name="suplStatus" type="String" />
        <variable name="wifiStatus" type="String" />
        <variable name="isAgnssEnabled" type="boolean" />
        <variable name="roamStatus" type="String" />
        <variable name="suplApn" type="String" />
    </data>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gen_table_bg"
        android:paddingHorizontal="@dimen/table_row_margin_horizontal"
        android:stretchColumns="1"
        tools:ignore="RtlSymmetry">

        <!-- Wifi Status -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/label_wifi"
                android:textStyle="bold" />

            <TextView
                android:paddingStart="@dimen/table_row_margin_horizontal"
                android:text="@{wifiStatus}" />
        </TableRow>

        <!-- Telephony Status -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/label_mobile"
                android:textStyle="bold" />

            <TextView
                android:layout_height="match_parent"
                android:paddingStart="@dimen/table_row_margin_horizontal"
                android:text="@{phoneStatus}" />
        </TableRow>

        <!-- Mobile Data Status -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/label_data"
                android:textStyle="bold" />

            <TextView
                android:paddingStart="@dimen/table_row_margin_horizontal"
                android:text="@{dataStatus}" />
        </TableRow>

        <!-- AGNSS Status -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/label_agnss"
                android:textStyle="bold" />

            <TextView
                android:paddingStart="@dimen/table_row_margin_horizontal"
                android:text="@{isAgnssEnabled ? @string/cmn_enabled : @string/cmn_disabled}"
                android:textColor="@{isAgnssEnabled ? @color/blue : @color/red }" />
        </TableRow>

        <!-- Roaming Status -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_roam"
                android:textStyle="bold" />

            <TextView
                android:paddingStart="@dimen/table_row_margin_horizontal"
                android:text="@{roamStatus}" />
        </TableRow>

        <!-- SUPL APN Status -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_supl_apn"
                android:textStyle="bold" />

            <TextView
                android:paddingStart="@dimen/table_row_margin_horizontal"
                android:text="@{suplApn}" />
        </TableRow>

    </TableLayout>

</layout>
